test GitHub pipeline

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h3 th:text="'Welcome '+${username}+' your current balance is £' + ${username}"></h3>
+        <h3 th:text="'Welcome '+${username}+' your current balance is £' + ${amount}"></h3>
         <p>You can pay or receive £10, take your pick</p>
             <a class="btn btn-lg btn-primary" href="#" role="button">Pay £10</a>
             <a class="btn btn-lg btn-primary" href="#" role="button">Receive £10</a>
