--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,18 +11,14 @@
 <div class="container">
 
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            Queen's Bank
+        <a class="navbar-brand" href="/">
+            Queens' Bank
         </a>
     </nav>
 
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h3 th:text="'Welcome '+${username}+' your current balance is £' + ${amount}"></h3>
-        <p>You can pay or receive £10, take your pick
-            <a class="btn btn-lg btn-primary" href="/pay" role="button">Pay £10</a>
-            <a class="btn btn-lg btn-primary" href="/receive" role="button">Receive £10</a>
-        </p>
+        <h3>I can't let you do that</h3>
     </div>
 </div>
 </body>
