--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,7 +18,7 @@
 
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h3>I can't let you do that</h3>
+        <h3>Error - I can't let you do that</h3>
     </div>
 </div>
 </body>
